force-app/main/default/objects/Issue_Bug__c/Issue_Bug__c.object-meta.xml
<CustomObject>
    <label>Issue/Bug</label>
    <nameField>
        <label>Issue/Bug Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issues/Bugs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>