force-app/main/default/objects/Issue_Bug__c/fields/Actual_Result__c.field-meta.xml
<CustomField>
    <fullName>Actual_Result__c</fullName>
    <label>Actual Result</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>