force-app/main/default/objects/Issue_Bug__c/fields/Affected_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Affected_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affected Milestone</label>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>Issues/Bugs (Affected Milestone)</relationshipLabel>
    <relationshipName>Issues_Bugs1</relationshipName>
    <type>Lookup</type>
</CustomField>