force-app/main/default/objects/Issue_Bug__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Crash/Hang</fullName>
            </value>
            <value>
                <fullName>Data Loss</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>UI/Usablity</fullName>
            </value>
            <value>
                <fullName>Other bug</fullName>
            </value>
            <value>
                <fullName>Feature(New)</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>