force-app/main/default/objects/Issue_Bug__c/fields/Commnets__c.field-meta.xml
<CustomField>
    <fullName>Commnets__c</fullName>
    <label>Commnets</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>