force-app/main/default/objects/Issue_Bug__c/fields/Estimated_no_of_hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_no_of_hours__c</fullName>
    <label>Estimated no of hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>