force-app/main/default/objects/Issue_Bug__c/fields/Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>Expected_Result__c</fullName>
    <label>Expected Result</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>