force-app/main/default/objects/Issue_Bug__c/fields/Is_SLA_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Is_SLA_At_Risk__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(SLA__c)),
        DATEVALUE(SLA__c) &lt; TODAY(),
        TEXT(Retest_Status__c) &lt;&gt; &quot;Closed&quot;
    ),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is SLA At Risk</label>
    <type>Checkbox</type>
</CustomField>