force-app/main/default/objects/Issue_Bug__c/fields/Issue_Id__c.field-meta.xml
<CustomField>
    <fullName>Issue_Id__c</fullName>
    <displayFormat>IID-{00000000}</displayFormat>
    <label>Issue Id</label>
    <type>AutoNumber</type>
</CustomField>