force-app/main/default/objects/Issue_Bug__c/fields/Issue_Iteration__c.field-meta.xml
<CustomField>
    <fullName>Issue_Iteration__c</fullName>
    <label>Issue Iteration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>