force-app/main/default/objects/Issue_Bug__c/fields/Reason_For_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Rejected__c</fullName>
    <label>Reason For Rejected</label>
    <type>TextArea</type>
</CustomField>