force-app/main/default/objects/Issue_Bug__c/fields/Release_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Release_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Milestone</label>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>Issues/Bugs</relationshipLabel>
    <relationshipName>Issues_Bugs</relationshipName>
    <type>Lookup</type>
</CustomField>