force-app/main/default/objects/Issue_Bug__c/fields/Reproducible__c.field-meta.xml
<CustomField>
    <fullName>Reproducible__c</fullName>
    <label>Reproducible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Sometimes</fullName>
            </value>
            <value>
                <fullName>Rarely</fullName>
            </value>
            <value>
                <fullName>Unable</fullName>
            </value>
            <value>
                <fullName>Never Tried</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>