force-app/main/default/objects/Issue_Bug__c/fields/Retest_Fixed_Count__c.field-meta.xml
<CustomField>
    <fullName>Retest_Fixed_Count__c</fullName>
    <description>Field counts issues counts fixed from retesting.</description>
    <label>Retest Fixed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>