force-app/main/default/objects/Issue_Bug__c/fields/Retest_Status__c.field-meta.xml
<CustomField>
    <fullName>Retest_Status__c</fullName>
    <label>Retest Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Retest</fullName>
            </value>
            <value>
                <fullName>Pending Retest</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>SLA at Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>