force-app/main/default/objects/Issue_Bug__c/fields/Retesting_Count__c.field-meta.xml
<CustomField>
    <fullName>Retesting_Count__c</fullName>
    <label>Retesting Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>