force-app/main/default/objects/Issue_Bug__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <label>SLA</label>
    <type>DateTime</type>
</CustomField>