force-app/main/default/objects/Issue_Bug__c/fields/Steps_To_Reproduce__c.field-meta.xml
<CustomField>
    <fullName>Steps_To_Reproduce__c</fullName>
    <label>Steps To Reproduce</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>