force-app/main/default/objects/Issue_Bug__c/fields/Task_List__c.field-meta.xml
<CustomField>
    <fullName>Task_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task List</label>
    <referenceTo>Task_List__c</referenceTo>
    <relationshipLabel>Issues/Bugs</relationshipLabel>
    <relationshipName>Issues_Bugs</relationshipName>
    <type>Lookup</type>
</CustomField>