force-app/main/default/objects/Issue_Bug__c/fields/Tasks__c.field-meta.xml
<CustomField>
    <fullName>Tasks__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tasks</label>
    <referenceTo>Tasks__c</referenceTo>
    <relationshipLabel>Issues/Bugs</relationshipLabel>
    <relationshipName>Issues_Bugs</relationshipName>
    <type>Lookup</type>
</CustomField>