force-app/main/default/objects/Issue_Bug__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Issue_Id__c</columns>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Actual_Result__c</columns>
    <columns>Affected_Milestone__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Environment__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>