force-app/main/default/objects/Issue_Bug__c/listViews/My_List.listView-meta.xml
<ListView>
    <fullName>My_List</fullName>
    <columns>NAME</columns>
    <columns>Actual_Result__c</columns>
    <columns>Affected_Milestone__c</columns>
    <columns>Assignee__c</columns>
    <columns>Classification__c</columns>
    <columns>Project__c</columns>
    <columns>Commnets__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Description__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>My List</label>
</ListView>