force-app/main/default/objects/Issue_Bug__c/listViews/Retesting.listView-meta.xml
<ListView>
    <fullName>Retesting</fullName>
    <columns>Issue_Id__c</columns>
    <columns>NAME</columns>
    <columns>Environment__c</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>Severity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Retest</value>
    </filters>
    <label>Retesting</label>
</ListView>