force-app/main/default/objects/Issue_Bug__c/listViews/UAT.listView-meta.xml
<ListView>
    <fullName>UAT</fullName>
    <columns>NAME</columns>
    <columns>Environment__c</columns>
    <columns>Status__c</columns>
    <columns>Issue_Id__c</columns>
    <columns>Project__c</columns>
    <columns>Retest_Result__c</columns>
    <columns>Classification__c</columns>
    <columns>Decision__c</columns>
    <columns>Estimated_no_of_hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Environment__c</field>
        <operation>equals</operation>
        <value>UAT</value>
    </filters>
    <filters>
        <field>Decision__c</field>
        <operation>equals</operation>
    </filters>
    <label>UAT</label>
</ListView>