force-app/main/default/objects/Issue_Bug__c/listViews/UAT_QA.listView-meta.xml
<ListView>
    <fullName>UAT_QA</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Project__c</columns>
    <columns>Severity__c</columns>
    <columns>Classification__c</columns>
    <columns>Decision__c</columns>
    <columns>Reproducible__c</columns>
    <columns>Steps_To_Reproduce__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Environment__c</field>
        <operation>equals</operation>
        <value>UAT</value>
    </filters>
    <filters>
        <field>Decision__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <filters>
        <field>Classification__c</field>
        <operation>equals</operation>
        <value>Security,Crash/Hang,Data Loss,Performance,UI/Usablity,Other bug</value>
    </filters>
    <label>UAT_QA</label>
</ListView>